      dialog will look better
    - on Vista and later the dialog will use the new user interface
* Use the new user interface for all open folder dialogs on Windows Vista and later
* Avoid using negative option in the Tweaks page: change "Don't use 'search in folder'
  on commands 'Skip back/forward' when only one item in playlist" into "Open next/previous
  file in folder on 'Skip back/forward' when there is only one item in playlist".
* The minidump feature is now enabled by default. The crash dialog has been updated to
  redirect the users to the bug tracker
* Updated ffmpeg
* Updated MediaInfoLib to v0.7.57
* Updated ZenLib to v0.4.26
* Updated SoundTouch to v1.7.0pre r142
* Updated VirtualDub to v1.10.2-test7
* Updated zlib to v1.2.7
* Updated Detours to v3.0 build 316
* Updated Little CMS to v2.4 (git 9fc6a31 19/05/2012)
* Updated French, Turkish, Czech, Russian, Ukrainian, Simplified Chinese, Japanese,
  Traditional Chinese, Italian, German, Polish and Portuguese (Brazil) translations
* Removed GTSdll support since it's dead
* Removed the option to disable XP theming since it's of no use for any OS >= Windows XP
* Removed the option "Use the WM ASF Reader for Windows Media files" since it has no
  effect on any "modern" OS (>= Windows XP)
* Removed SSF support
! Broken playback and picture on H.264 and MPEG-2 interlaced with DXVA on
  intergrated Intel adapter
! The settings location is now changed only when applying the changes in the
  options dialog instead of immediately after changing the state of the checkbox
! Improve/Fix the "Open" dialog:
   - the "OK" button will be disabled until a file has been selected (this avoids
     an error when clicking on "OK" while no file was selected)
   - when the selected file cannot be dubbed (for example when opening an rtsp
     stream) the wrong label was grayed out
! MatroskaSplitter: Better detection of fps for some webm files